--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,7 @@
 	<version>0.0.1</version>
 	<name>book-odata</name>
 	<description>Project for book library on odata</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+	
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -76,7 +64,12 @@
 		    <artifactId>odata-commons-core</artifactId>
 		    <version>4.4.0</version>
 		</dependency>
-		
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.1</version>
+		    <scope>provided</scope>
+		</dependency>		
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
