--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
 		    <groupId>org.apache.olingo</groupId>
 		    <artifactId>odata-commons-core</artifactId>
 		    <version>5.0.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>	
 		
 		<dependency>
