--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.0</version>
+		<version>2.7.18</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>book.odata</groupId>
@@ -46,24 +46,20 @@
 		
 		<dependency>
 		    <groupId>org.apache.olingo</groupId>
-		    <artifactId>odata-server-api</artifactId>
-		    <version>5.0.0</version>
-		  </dependency>
-		  <dependency>
-		    <groupId>org.apache.olingo</groupId>
-		    <artifactId>odata-server-core</artifactId>
-		    <version>5.0.0</version>
-		  </dependency>
-		  <dependency>
-		    <groupId>org.apache.olingo</groupId>
-		    <artifactId>odata-commons-api</artifactId>
-		    <version>5.0.0</version>
-		  </dependency>
-		  <dependency>
-		    <groupId>org.apache.olingo</groupId>
-		    <artifactId>odata-commons-core</artifactId>
-		    <version>5.0.0</version>
+		    <artifactId>olingo-odata2-jpa-processor-core</artifactId>
+		    <version>2.0.12</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.olingo</groupId>
+		    <artifactId>olingo-odata2-core</artifactId>
+		    <version>2.0.12</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.olingo</groupId>
+		    <artifactId>olingo-odata2-api</artifactId>
+		    <version>2.0.12</version>
+		</dependency>
+
 		<dependency>
 		    <groupId>com.fasterxml.jackson.datatype</groupId>
 		    <artifactId>jackson-datatype-jsr310</artifactId>
